modified InputCheck.java